--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".activities.AddViewDynamicallyActivity"></activity>
+        <activity android:name=".activities.ZoomRecyclerView" />
         <activity android:name=".activities.ImageViewPagerActivity" />
         <activity
             android:name=".ImagePickerActivity"
@@ -40,7 +42,6 @@
         <activity android:name=".activities.RegisterActivity" />
         <activity android:name=".activities.UsersListActivity" />
         <activity android:name=".activities.CropImageActivity" />
-
         <activity android:name="com.soundcloud.android.crop.CropImageActivity" />
 
         <receiver android:name=".helpers.BroadCastReceiver">
